NewArchive/d7e2bf6240bbd7d4bf4730549245061a-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:22:18: error: 'senence' was not declared in this scope
     std::cout << senence << std::endl;
                  ^
